--- a/_compra.html
+++ b/_compra.html
@@ -119,7 +119,7 @@ function renderProductos() {
             <div class="card card-producto">
                 <img src="${producto.imagen}" class="card-img-top" alt="${producto.nombre}">
                 <div class="card-body">
-                    <a href="${producto.link}" class="link-none">
+                    <a href="/${producto.link}" class="link-none">
                         <p class="card-title">${producto.nombre}</p>
                     </a>
                     <div class="d-flex flex-column mb-3">
