--- a/admin/_index.html
+++ b/admin/_index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <style>
         .bd-placeholder-img {
@@ -92,7 +92,7 @@
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="assets/admin/dashboard.css" rel="stylesheet">
+    <link href="/assets/admin/dashboard.css" rel="stylesheet">
 </head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -119,7 +119,7 @@
         <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
             aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
             <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-                <use href="#circle-half"></use>
+                <use href="/#circle-half"></use>
             </svg>
             <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
         </button>
@@ -128,11 +128,11 @@
                 <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
                     aria-pressed="false">
                     <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#sun-fill"></use>
+                        <use href="/#sun-fill"></use>
                     </svg>
                     Light
                     <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
+                        <use href="/#check2"></use>
                     </svg>
                 </button>
             </li>
@@ -140,11 +140,11 @@
                 <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
                     aria-pressed="false">
                     <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#moon-stars-fill"></use>
+                        <use href="/#moon-stars-fill"></use>
                     </svg>
                     Dark
                     <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
+                        <use href="/#check2"></use>
                     </svg>
                 </button>
             </li>
@@ -152,11 +152,11 @@
                 <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
                     aria-pressed="true">
                     <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                        <use href="#circle-half"></use>
+                        <use href="/#circle-half"></use>
                     </svg>
                     Auto
                     <svg class="bi ms-auto d-none" width="1em" height="1em">
-                        <use href="#check2"></use>
+                        <use href="/#check2"></use>
                     </svg>
                 </button>
             </li>
@@ -230,7 +230,7 @@
     </svg>
 
     <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">Company name</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="/#">Company name</a>
 
         <ul class="navbar-nav flex-row d-md-none">
             <li class="nav-item text-nowrap">
@@ -238,7 +238,7 @@
                     data-bs-target="#navbarSearch" aria-controls="navbarSearch" aria-expanded="false"
                     aria-label="Toggle search">
                     <svg class="bi">
-                        <use xlink:href="#search" />
+                        <use xlink:href="/#search" />
                     </svg>
                 </button>
             </li>
@@ -247,7 +247,7 @@
                     data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <svg class="bi">
-                        <use xlink:href="#list" />
+                        <use xlink:href="/#list" />
                     </svg>
                 </button>
             </li>
@@ -271,49 +271,49 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#house-fill" />
+                                        <use xlink:href="/#house-fill" />
                                     </svg>
                                     Dashboard
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#file-earmark" />
+                                        <use xlink:href="/#file-earmark" />
                                     </svg>
                                     Orders
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#cart" />
+                                        <use xlink:href="/#cart" />
                                     </svg>
                                     Products
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#people" />
+                                        <use xlink:href="/#people" />
                                     </svg>
                                     Customers
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#graph-up" />
+                                        <use xlink:href="/#graph-up" />
                                     </svg>
                                     Reports
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#puzzle" />
+                                        <use xlink:href="/#puzzle" />
                                     </svg>
                                     Integrations
                                 </a>
@@ -323,41 +323,41 @@
                         <h6
                             class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
                             <span>Saved reports</span>
-                            <a class="link-secondary" href="#" aria-label="Add a new report">
+                            <a class="link-secondary" href="/#" aria-label="Add a new report">
                                 <svg class="bi">
-                                    <use xlink:href="#plus-circle" />
+                                    <use xlink:href="/#plus-circle" />
                                 </svg>
                             </a>
                         </h6>
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#file-earmark-text" />
+                                        <use xlink:href="/#file-earmark-text" />
                                     </svg>
                                     Current month
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#file-earmark-text" />
+                                        <use xlink:href="/#file-earmark-text" />
                                     </svg>
                                     Last quarter
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#file-earmark-text" />
+                                        <use xlink:href="/#file-earmark-text" />
                                     </svg>
                                     Social engagement
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#file-earmark-text" />
+                                        <use xlink:href="/#file-earmark-text" />
                                     </svg>
                                     Year-end sale
                                 </a>
@@ -368,17 +368,17 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#gear-wide-connected" />
+                                        <use xlink:href="/#gear-wide-connected" />
                                     </svg>
                                     Settings
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                                <a class="nav-link d-flex align-items-center gap-2" href="/#">
                                     <svg class="bi">
-                                        <use xlink:href="#door-closed" />
+                                        <use xlink:href="/#door-closed" />
                                     </svg>
                                     Sign out
                                 </a>
@@ -400,7 +400,7 @@
                         <button type="button"
                             class="btn btn-sm btn-outline-secondary dropdown-toggle d-flex align-items-center gap-1">
                             <svg class="bi">
-                                <use xlink:href="#calendar3" />
+                                <use xlink:href="/#calendar3" />
                             </svg>
                             This week
                         </button>
