--- a/admin/usuario/index.html
+++ b/admin/usuario/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-    <link href="assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="/assets/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="assets/admin/dashboard.css" rel="stylesheet">
+    <link href="/assets/admin/dashboard.css" rel="stylesheet">
 
     <style>
         a.nav-link.nav-menu.nav-active {
@@ -60,7 +60,7 @@
 
 <body>
     <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#">Company name</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="/#">Company name</a>
         <ul class="navbar-nav flex-row d-md-none">
             <li class="nav-item text-nowrap">
                 <button class="nav-link px-3 text-white" type="button" data-bs-toggle="offcanvas"
@@ -93,37 +93,37 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item mx-2">
-                                <a href="admin/index.html" class="nav-link nav-menu d-flex gap-2">
+                                <a href="/admin/index.html" class="nav-link nav-menu d-flex gap-2">
                                     <i class="bi bi-house-fill"></i>
                                     Dashboard
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="admin/ordenes/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/ordenes/index.html">
                                     <i class="bi bi-file-earmark"></i>
                                     Ordenes
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="admin/producto/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/producto/index.html">
                                     <i class="bi bi-cart"></i>
                                     Productos
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="admin/categoria/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/categoria/index.html">
                                     <i class="bi bi-list-ul"></i>
                                     Categorías
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="admin/usuario/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2 nav-active" href="/admin/usuario/index.html">
                                     <i class="bi bi-people"></i>
                                     Usuarios
                                 </a>
                             </li>
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="admin/reporte/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/reporte/index.html">
                                     <i class="bi bi-graph-up"></i>
                                     Reportes
                                 </a>
@@ -134,7 +134,7 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mx-2">
-                                <a class="nav-link nav-menu d-flex gap-2" href="admin/perfil/index.html">
+                                <a class="nav-link nav-menu d-flex gap-2" href="/admin/perfil/index.html">
                                     <i class="bi bi-person-circle"></i>
                                     Perfil
                                 </a>
@@ -146,13 +146,13 @@
 
                         <ul class="nav flex-column mb-auto">
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-dark" href="/">
                                     <i class="bi bi-shop"></i>
                                     <strong>Tienda</strong>
                                 </a>
                             </li>
                             <li class="nav-item mt-2 mx-2">
-                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="iniciar-sesion.html">
+                                <a class="mx-4 text-center d-flex gap-2 btn btn-danger" href="/iniciar-sesion.html">
                                     <i class="bi bi-door-closed"></i>
                                     Cerrar Sesión
                                 </a>
@@ -178,26 +178,26 @@
                     <!-- <h2>Section title</h2> -->
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
-                            <a class="nav-link nav-menu active" aria-current="page" href="admin/usuario/index.html">Listado de usuarios</a>
+                            <a class="nav-link nav-menu active" aria-current="page" href="/admin/usuario/index.html">Listado de usuarios</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
-                            <a class="nav-link nav-menu dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link nav-menu dropdown-toggle" data-bs-toggle="dropdown" href="/#" role="button"
                                 aria-expanded="false">Dropdown</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="/#">Action</a></li>
+                                <li><a class="dropdown-item" href="/#">Another action</a></li>
+                                <li><a class="dropdown-item" href="/#">Something else here</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                                <li><a class="dropdown-item" href="/#">Separated link</a></li>
                             </ul>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" href="admin/usuario/index-personajes.html">Listado personajes</a>
+                            <a class="nav-link nav-menu" href="/admin/usuario/index-personajes.html">Listado personajes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-menu" href="admin/usuario/nuevo.html">Nuevo usuario</a>
+                            <a class="nav-link nav-menu" href="/admin/usuario/nuevo.html">Nuevo usuario</a>
                         </li>
                     </ul>
                     <div class="card text-start">
@@ -220,7 +220,7 @@
                                             <th scope="row">998</th>
                                             <td><img src="/assets/img/Luna.png" alt="Usuario 1"
                                                     class="user-img"></td>
-                                            <td><a href="admin/usuario/3312" id="userLink10000">Luna</a></td>
+                                            <td><a href="/admin/usuario/3312" id="userLink10000">Luna</a></td>
                                             <td>luna.scrummaster@example.com</td>
                                             <td></td>
                                             <td><h6><span class="badge bg-primary">ADMINISTRADOR</span></h6></td>
@@ -229,7 +229,7 @@
                                             <th scope="row">999</th>
                                             <td><img src="/assets/img/pedro.png" alt="Usuario 1"
                                                     class="user-img"></td>
-                                            <td><a href="admin/usuario/3312" id="userLink10000">Pedro Desarrollador</a></td>
+                                            <td><a href="/admin/usuario/3312" id="userLink10000">Pedro Desarrollador</a></td>
                                             <td>pedro.hacker@example.com</td>
                                             <td>+1 (555) 111-4567</td>
                                             <td><h6><span class="badge bg-success">VENDEDOR</span></h6></td>
@@ -238,7 +238,7 @@
                                             <th scope="row">1000</th>
                                             <td><img src="/assets/img/face-programador2.png" alt="Usuario 1"
                                                     class="user-img"></td>
-                                            <td><a href="admin/usuario/3312" id="userLink10000">Joseph MT</a></td>
+                                            <td><a href="/admin/usuario/3312" id="userLink10000">Joseph MT</a></td>
                                             <td>joseph.devops@example.com</td>
                                             <td>+1 (555) 556-5525</td>
                                             <td><h6><span class="badge bg-warning">CLIENTE</span></h6></td>
@@ -285,7 +285,7 @@
                 row.innerHTML = `
                     <th scope="row">${user.id}</th>
                     <td><img src="${user.img}" alt="Usuario ${index + 1}" class="user-img"></td>
-                    <td><a href="admin/usuario/${user.id}" id="userLink${user.id}">${user.name}</a></td>
+                    <td><a href="/admin/usuario/${user.id}" id="userLink${user.id}">${user.name}</a></td>
                     <td>${user.email}</td>
                     <td>${user.phone || ''}</td>
                     <td><h6>${typeUser}</h6></td>
