--- a/comprar-ok.html
+++ b/comprar-ok.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <style>
         body {
@@ -92,7 +92,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="/">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -102,8 +102,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -122,30 +122,30 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="/#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -174,8 +174,8 @@
                             <h5 class="card-title">Nombre del Usuario</h5>
                             <p class="card-text">correo@ejemplo.com</p>
                             <div class="d-flex justify-content-between">
-                                <a href="#" class="btn btn-primary btn-sm">Ver Perfil</a>
-                                <a href="#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
+                                <a href="/#" class="btn btn-primary btn-sm">Ver Perfil</a>
+                                <a href="/#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
                             </div>
                         </div>
                     </div>
@@ -183,8 +183,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
@@ -220,8 +220,8 @@
                     </div>
                 </li>
 
-                <li class="list-group-item"><a href="#" class="link-none">Ofertas</a></li>
-                <li class="list-group-item"><a href="#" class="link-none">Historial</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Ofertas</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Historial</a></li>
             </ul>
         </div>
     </div>
@@ -319,7 +319,7 @@
                                         <div class="card-body">
                                             <!-- <h5 class="card-title">Card title</h5> -->
                                             <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                                            <!-- <a href="/#" class="btn btn-primary">Go somewhere</a> -->
                                             <h4>Total pagado: $ <span id="totalCompra"><strong>1000</strong></span></h4>
                                         </div>
                                     </div>
