--- a/comprar.html
+++ b/comprar.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <style>
         body {
@@ -91,7 +91,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="/">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -101,8 +101,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -121,30 +121,30 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="/#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ofertas.html">Ofertas</a>
+                        <a class="nav-link" href="/ofertas.html">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -173,8 +173,8 @@
                             <h5 class="card-title">Nombre del Usuario</h5>
                             <p class="card-text">correo@ejemplo.com</p>
                             <div class="d-flex justify-content-between">
-                                <a href="#" class="btn btn-primary btn-sm">Ver Perfil</a>
-                                <a href="#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
+                                <a href="/#" class="btn btn-primary btn-sm">Ver Perfil</a>
+                                <a href="/#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
                             </div>
                         </div>
                     </div>
@@ -182,8 +182,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
@@ -219,8 +219,8 @@
                     </div>
                 </li>
 
-                <li class="list-group-item"><a href="#" class="link-none">Ofertas</a></li>
-                <li class="list-group-item"><a href="#" class="link-none">Historial</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Ofertas</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Historial</a></li>
             </ul>
         </div>
     </div>
@@ -239,7 +239,7 @@
                                         <h4 class="card-title">Carrito de compra</h4>
                                         <p class="card-text">Completa la siguiente información</p>
                                     </div>
-                                    <p href="carrito.html" class="btn btn-primary py-3">Total a pagar: <strong><span id="totalPago">$5.000</span></strong></p>
+                                    <p href="/carrito.html" class="btn btn-primary py-3">Total a pagar: <strong><span id="totalPago">$5.000</span></strong></p>
                                 </div>
                                 <div class="table-responsive mt-3">
                                     <table class="table table-hover table-sm">
@@ -315,7 +315,7 @@
 
 
                                 <div class="text-end">
-                                    <a class="btn btn-success btn-lg" href="comprar-ok.html">Pagar ahora <span id="totalPagoBtn"><strong>$0.000</strong></span></a>
+                                    <a class="btn btn-success btn-lg" href="/comprar-ok.html">Pagar ahora <span id="totalPagoBtn"><strong>$0.000</strong></span></a>
                                 </div>
                             </div>
 
