--- a/ofertas.html
+++ b/ofertas.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <style>
         body {
@@ -46,7 +46,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="/">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -56,8 +56,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -76,33 +76,33 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarBottomContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" href="/#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Categorías
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="categorias.html">Acción</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Aventura</a></li>
-                            <li><a class="dropdown-item" href="categorias.html">Estrategia</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Acción</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Aventura</a></li>
+                            <li><a class="dropdown-item" href="/categorias.html">Estrategia</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-success" href="ofertas.html"><strong>Ofertas</strong></a>
+                        <a class="nav-link active text-success" href="/ofertas.html"><strong>Ofertas</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">blog</a>
+                        <a class="nav-link" href="/blog.html">blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="/contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-success ms-5" href="carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
+                        <a class="btn btn-success ms-5" href="/carrito.html"><strong><i class="bi bi-cart4"></i> Carrito <span class=""> <strong>$5.000</strong></span>
                         </strong></a>
                     </li>
                 </ul>
@@ -132,8 +132,8 @@
                             <h5 class="card-title">Nombre del Usuario</h5>
                             <p class="card-text">correo@ejemplo.com</p>
                             <div class="d-flex justify-content-between">
-                                <a href="#" class="btn btn-primary btn-sm">Ver Perfil</a>
-                                <a href="#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
+                                <a href="/#" class="btn btn-primary btn-sm">Ver Perfil</a>
+                                <a href="/#" class="btn btn-danger btn-sm">Cerrar Sesión</a>
                             </div>
                         </div>
                     </div>
@@ -141,8 +141,8 @@
             </div>
 
             <div class="d-flex my-3">
-                <a href="iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
 
 
@@ -176,8 +176,8 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item"><a href="#" class="link-none">Ofertas</a></li>
-                <li class="list-group-item"><a href="#" class="link-none">Historial</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Ofertas</a></li>
+                <li class="list-group-item"><a href="/#" class="link-none">Historial</a></li>
             </ul>
         </div>
     </div>
@@ -204,7 +204,7 @@
                     <div class="card card-producto" onclick="window.location='${producto.link}'">
                         <img src="${producto.imagen}" class="card-img-top" alt="${producto.nombre}">
                         <div class="card-body">
-                            <a href="${producto.link}" class="link-none">
+                            <a href="/${producto.link}" class="link-none">
                                 <p class="card-title">${producto.nombre}</p>
                             </a>
                             <div class="d-flex flex-column mb-3">
