--- a/productos/producto1.html
+++ b/productos/producto1.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/../style.css">
     <style>
         .product-img {
             width: 100%;
@@ -29,7 +29,7 @@
     <!-- Navbar Superior -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/#">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-center" id="navbarTopContent">
@@ -39,8 +39,8 @@
                 </form>
             </div>
             <div class="d-flex">
-                <a href="../iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
-                <a href="../crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
+                <a href="/../iniciar-sesion.html" class="btn btn-outline-primary ms-2">Iniciar Sesión</a>
+                <a href="/../crear-sesion.html" class="btn btn-primary ms-2">Crear Cuenta</a>
             </div>
         </div>
     </nav>
@@ -49,8 +49,8 @@
     <div class="row">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="">Volver</a></li>
-                <li class="breadcrumb-item"><a href="categorias.html">Categorías</a></li>
+                <li class="breadcrumb-item"><a href="/">Volver</a></li>
+                <li class="breadcrumb-item"><a href="/categorias.html">Categorías</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Acción</li>
             </ol>
         </nav>
